# ioc-cfn-mas-client-lib

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  RELEASING.md  SECURITY.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yaml  publish.yaml
app/src/: common.py  server.py
deploy/charts/ioc-cfn-mas-client-lib/: Chart.yaml  values.yaml
deploy/charts/ioc-cfn-mas-client-lib/templates/: alerts.yaml  namespace.yaml
docs/: A2A_INTEGRATION.md  DEPLOYMENT.md  DEVELOPMENT.md  MCP_INTEGRATION.md
docs/claude/: REPOSITORY_SPEC.md
examples/: .env.example  README.md  advanced_memory_example.py  example.py  memory_examples.py  simple_mgmt_example.py
examples/instrumentation/: README.md
examples/instrumentation/a2a/: multi_agent_example.py
examples/mcp/: client_example.py
examples/sidecar/: Dockerfile.agent_a  Dockerfile.agent_b  Dockerfile.cfn  Dockerfile.mock_cfn  README.md  agent_a.py  agent_b.py  cfn_api.py  mock_cfn_api.py  setup.sh
examples/sidecar/istio/: Dockerfile.agent_a  Dockerfile.agent_b  Dockerfile.cfn  README.md  agent_a.py  agent_b.py  cfn_api.py  setup.sh
examples/sidecar/istio/demo-apps/: agent_a.py
examples/sidecar/istio/k8s/: agent-a.yaml  agent-b.yaml  envoy-filter.yaml
examples/sidecar/k8s/: agent-a.yaml  agent-b.yaml  cfn.yaml  envoy-filter.yaml  mock-cfn.yaml  namespace.yaml
examples/sidecar/standalone/: Dockerfile.sidecar  IMPLEMENTATION.md  README.md  setup.sh  sidecar-entrypoint.sh  test-local.sh
examples/sidecar/standalone/demo-apps/: Dockerfile.agent_a  Dockerfile.agent_b  (+4 more)
openapi/: README.md  openapi.json  public-api-v0.2.1.yaml  public-api-v1.1.yaml
scripts/: unit-test.sh
sidecar/: .gitignore  README.md  __init__.py
sidecar/envoy/: Dockerfile  README.md  config.py  entrypoint.sh  envoy.yaml  ext_authz_service.py  message_parser.py
sidecar/envoy/kubernetes/: agent-with-sidecar.yaml
sidecar/istio/: Dockerfile  envoy-filter.yaml
sidecar/shared/: __init__.py  config.py  ext_authz_service.py  ioc_cfn_l9_service.py  l9_converter.py  logger.py  message_parser.py
sidecar/standalone/: Dockerfile  README.md  entrypoint.sh  envoy.yaml  init-iptables.sh
src/ioc_cfn_mas_client/: __init__.py  client.py  management_plane_client.py
src/ioc_cfn_mas_client/instrumentation/: __init__.py  a2a.py
src/ioc_cfn_mas_client/mcp/: README.md  mcp_client.py  mcp_client_sample.py
tests/: __init__.py  test_l9_client.py
(+3 files in other folders)
