# pyproject.toml

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ioc-cfn-mas-client-lib"
version = "0.2.2"
description = "Python SDK client library for IoC Cognition Fabric Node"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Outshift Open", email = "oss@cisco.com" }
]
keywords = ["ioc", "cognition-fabric", "mas", "multi-agent-system", "sdk", "cfn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "pydantic>=2.5",
  "urllib3>=1.26",
  "python-dateutil>=2.8",
  "typing-extensions>=4.7",
  "a2a-sdk[http-server]==0.3.26",
  "uvicorn>=0.44.0",
  "aiohttp>=3.8.0",
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
  "xds-protos>=1.60",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.4",
  "mypy>=1.8",
  "build>=1.0",
  "twine>=4.0",
]

[project.urls]
Homepage = "https://github.com/outshift-open/ioc-cfn-mas-client-lib"
Documentation = "https://github.com/outshift-open/ioc-cfn-mas-client-lib/blob/main/README.md"
Repository = "https://github.com/outshift-open/ioc-cfn-mas-client-lib"
Issues = "https://github.com/outshift-open/ioc-cfn-mas-client-lib/issues"
Changelog = "https://github.com/outshift-open/ioc-cfn-mas-client-lib/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ioc_cfn_mas_client*", "generated*"]
exclude = ["tests*", "*.egg-info"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [
  "src/generated",  # Exclude auto-generated OpenAPI code
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
  "^src/generated/",  # Exclude auto-generated OpenAPI code
]
